@@ -1,6 +1,8 @@
 Revision history for exact::conf
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.03      2019-08-26 15:14:29-07:00 America/Los_Angeles
         - Removed support for Perl versions prior to 5.14
